# imalign

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
imalign/: align.py  imalign.py  main.py
imalign/tests/: test_align.py  test_align_samples.py  test_align_synthetic.py  util.py
