[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imalign"
version = "0.0.5"
authors = [
  { name="Roman", email="roman@vintage-camera.pictures" },
]
description = "Align a source image file with a reference image"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["image align"]
dependencies = [
    "numpy>=1.23.4",
    "opencv-contrib-python-headless>=4.6.0.66"
]

[project.urls]
"Homepage" = "https://github.com/vintage-camera-pictures/imalign"
"Bug Tracker" = "https://github.com/vintage-camera-pictures/imalign/issues"

[project.scripts]
imalign = "imalign.main:main"